# instax_api

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  commandSender.py  development.md  echoServer.py  example.py  imageDecoder.py  imageTest.py  instaxServer-20171011-202830.json  newEx.py  pyproject.toml  replay.py  requirements.txt  responseConverter.py  rpi.md  sendTest.py  setup.py  testServer.py  tests_basic.py  tests_image_encoder.py  tests_premade.py  tests_replay.py
.github/workflows/: python-publish.yml  python-test.yml
instax/: __init__.py  ble-packet.py  commands.py  comms.py  core.py  debugServer.py  exceptions.py  instaxImage.py  packet.py  print.py  response.py  sp2.py  sp3.py  sp4.py  statusCodes.py  testServer.py  utilities.py
instax/tests/: replay.json  testEncodedImage.instax  test_basic.py  test_image_encoder.py  test_premade.py  test_replay.py  test_socket.py  test_sp2.py  test_sp3.py  tests_image_encoder.py  tests_socket.py  tests_sp2.py  tests_sp3.py
tests/: context.py  tests_basic.py
